--- a/mobile-index/consulta_de_peso.html
+++ b/mobile-index/consulta_de_peso.html
@@ -14,7 +14,7 @@
 <body>
 
     <nav class="barra-superior">
-        <a href="main.html">Inicio</a>
+        <a href="Inicio.html">Inicio</a>
         <a href="peso_ideal.html">Mi Peso Ideal</a>
         <a href="consulta_de_peso.html"> Consulta de Peso</a>
         <a href="imc.html">IMC</a>
