--- a/mobile-index/Inicio.html
+++ b/mobile-index/Inicio.html
@@ -18,6 +18,7 @@
         <a href="peso_ideal.html">Mi Peso Ideal</a>
         <a href="consulta_de_peso.html"> Consulta de Peso</a>
         <a href="imc.html">IMC</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
 
     <div class="maintext">
