--- a/mobile-index/Inicio.html
+++ b/mobile-index/Inicio.html
@@ -47,6 +47,7 @@
     </div>
 
     <img src="srcs/ecofit.png" alt="logo abajo" class="imagen-abajo">
+    <script src="main.js"></script>
 
 
 </body>
