--- a/mobile-index/Inicio.html
+++ b/mobile-index/Inicio.html
@@ -13,7 +13,7 @@
     <div class="fondo-transparente">
     </div>
 
-    <nav class="barra-superior">
+    <nav class="barra-superior" id="myTopnav">
         <a href="Inicio.html">Inicio</a>
         <a href="peso_ideal.html">Mi Peso Ideal</a>
         <a href="consulta_de_peso.html"> Consulta de Peso</a>
