--- a/mobile-index/peso_ideal.html
+++ b/mobile-index/peso_ideal.html
@@ -19,6 +19,7 @@
         <a href="consulta_de_peso.html"> Consulta de Peso</a>
         <a href="imc.html">IMC</a>
         <a href="/Inicio.html"> Sitio de escriotrio </a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
 
     <div class="maintext">
