--- a/mobile-index/consulta_de_peso.html
+++ b/mobile-index/consulta_de_peso.html
@@ -47,6 +47,7 @@
 
 
     <img src="srcs/tabla.jpg" alt="tabla de peso" class="imagen-derecha">
+    <script src="bar.js"></script>
 
       
 </body>
