--- a/mobile-index/peso_ideal.html
+++ b/mobile-index/peso_ideal.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <nav class="barra-superior">
+    <nav class="barra-superior" id="myTopnav">
         <a href="Inicio.html">Inicio</a>
         <a href="peso_ideal.html">Mi Peso Ideal</a>
         <a href="consulta_de_peso.html"> Consulta de Peso</a>
