--- a/imc.html
+++ b/imc.html
@@ -18,6 +18,7 @@
         <a href="peso_ideal.html">Mi Peso Ideal</a>
         <a href="consulta_de_peso.html"> Consulta de Peso</a>
         <a href="imc.html">IMC</a>
+        <a href="/mobile-index/Inicio.html">Sitio para movil</a>
     </nav>
     
     <div class="imc">
